@startuml

title __EXERCISE13's Class Diagram__\n

  package week02.exercise13 {
    class Competitor {
        - points : int
        + Competitor()
        + getDriver()
        + getVehicle()
        + getPoints()
        + addPoints()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class CompetitorList {
        - competitors : List<Competitor>
        + addCompetitor()
        + getCompetitors()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class CompetitorsGenerator {
        {static} - startingNumber : int
        - getRandomDriver()
        - getRandomVehicle()
        + getRandomCompetitor()
    }
  }
  

  package week02.exercise13 {
    class Driver {
        - name : String
        - startingNumber : int
        - driverText : String
        ~ Driver()
        + getName()
        + getStartingNumber()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class Motorcycle {
        - horn : boolean
        - hornAsText()
        ~ Motorcycle()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class Race {
        - competitors : List<Competitor>
        + Race()
        + addCompetitor()
        + generateStartingLineup()
        + getCompetitors()
        + getStartingLineup()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class RacingGame {
        + RacingGame()
        {static} + main()
    }
  }
  

  package week02.exercise13 {
    class Tank {
        - ammunition : int
        + getAmmunition()
        ~ Tank()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class Trike {
        - color : String
        ~ Trike()
        + toString()
    }
  }
  

  package week02.exercise13 {
    class Vehicle {
        # manufacturer : String
        # name : String
        # horsepower : int
        ~ Vehicle()
        + getManufacturer()
        + getName()
        + getHorsepower()
        + getEngineType()
        + toString()
        {static} + main()
    }
  }
  

  package week02.exercise13 {
    enum EngineType {
      electric
      diesel
      gasoline
    }
  }
  

  Competitor o-- Driver : driver
  Competitor o-- Vehicle : vehicle
  Motorcycle -up-|> Vehicle
  Tank -up-|> Vehicle
  Trike -up-|> Vehicle
  Vehicle o-- EngineType : engineType
  Vehicle +-down- EngineType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
